--- a/app/styles/index.css
+++ b/app/styles/index.css
@@ -5,3 +5,13 @@
   margin-top: 10px;
 
 }
+
+.settings-text{
+  font-size: 20px;
+  font-weight: bold;
+  text-align: center;
+}
+
+.Polaris-EmptyState__Image {
+    opacity: 1!important;
+}
